# pvlive-consumer

./: .all-contributorsrc  .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py  test-docker-compose.yml  test.db
.github/workflows/: linters.yaml  release.yaml  test-docker.yaml
gsp_name_update/: gsp_new_ids.csv  gsp_new_ids_and_names-edited.csv  gsp_new_ids_and_names.csv  gsp_old_ids.csv  merge_labels.py  new_labels.py
gspconsumer/: __init__.py  app.py  backup.py  gsps.py  nitghtime.py  time.py
infrastructure/docker/: Dockerfile
pvliveconsumer/: __init__.py  app.py  backup.py  gsps.py  nightime.py  nitghtime.py  time.py
pvliveconsumer/data/: readme.md  uk_gsp_locations.csv
scripts/: 2025_04_update.py  bmrs_analysis.py  extract_historical_data.py  gsp_details.py  gsp_dno_mapping.py  make_lat_lons.py  update_gsp_day_after.py  update_region_name.py
scripts/gsp_name_update/: gsp_data.json  gsp_new_ids_and_names.csv  merge_labels.py  new_labels.py  update_region_name.py
scripts/v3_to_v4/: plot.py  plot_gsp.py  plot_gsp_analysis.py  update_installed_capacity.py
scripts/v3_to_v4/data/: get_data.py
tests/: conftest.py  test_app.py  test_backup.py  test_gsps.py  test_nighttime.py  test_time.py
