# --- PROJECT CONFIGURATION --- #

[build-system]
requires = ["setuptools>=67", "wheel", "setuptools-git-versioning>=2.0,<3"]
build-backend = "setuptools.build_meta"

# Metadata (see https://peps.python.org/pep-0621/)
[project]
name = "pvliveconsumer"
description = "Pv Consumer"
dynamic = ["version"]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.12.0,<3.13"
license = {file = "LICENSE.txt"}
authors = [
    { name = "Open Climate Fix", email = "info@openclimatefix.org"},
]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy>=2",
    "pydantic>=2",
    "pandas",
    "pyyaml",
    "urllib3",
    "requests",
    "nowcasting_datamodel==1.5.46",
    "sentry-sdk==2.13.0",
    "click",
    "pvlib",
    "pvlive-api==1.4.0",
]

[dependency-groups]
dev = [
    # Testing
    "pytest",
    "pytest-cov",
    "coverage",
    # Linting and type checking
    "mypy",
    "ruff >= 0.9.2",
    # LSP Support
    "python-lsp-server",
    "pylsp-mypy",
    "python-lsp-ruff",
]

[project.scripts]
# Put entrypoints in here
pvliveconsumer = "pvliveconsumer.app:app"

[project.urls]
repository = "https://github.com/openclimatefix/pvlive-consumer"

[tool.setuptools.packages.find]
where = ["."]
include = ["pvliveconsumer*"]

[tool.setuptools-git-versioning]
enabled = true
dirty_template = "{tag}"

# --- LINTING AND TYPING CONFIGURATION --- #

# MyPy configuration
# * See https://mypy.readthedocs.io/en/stable/index.html
[tool.mypy]
python_version = "3.12"
dmypy = true
strict = true
warn_unreachable = true
warn_return_any = true
disallow_untyped_defs = true
plugins = [
    "numpy.typing.mypy_plugin",
]

# Ruff configuration
# * See https://beta.ruff.rs/docs/
[tool.ruff]
line-length = 100
exclude = ["__init__.py"]

[tool.ruff.lint]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle
    "W",   # whitespace and newlines
    "I",   # isort
    "UP",  # modernize
    "ANN", # flake8 type annotations
    "S",   # flake8 bandit
    "B",   # flake8 bugbear
    "C4",  # flake8 comprehensions
    "COM", # flake8 commas
    "T20", # flake8 print
    "SIM", # flake8 simplify
    "ARG", # flake8 unused arguments
    "DTZ", # flake8 datetimes
    "Q",   # flake8 quotes
    "TCH", # flake8 typecheck
    "D",   # pydocstyle
    "RUF", # ruff-specific rules
]
fixable = ["ALL"]
ignore = [
    "D203", "D213", "D215", "D400", "D401", "D404", "D406",
    "D407", "D408", "D409", "D413",
]

[tool.ruff.lint.per-file-ignores]
"test*" = ["D", "ANN"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 100
