[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pvliveconsumer"
version = "1.3.1"
description = "PV Live Consumer"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Open Climate Fix", email = "info@openclimatefix.org" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2",
    "pydantic>=2",
    "pandas",
    "pyyaml",
    "urllib3",
    "requests",
    "nowcasting_datamodel==1.5.46",
    "sentry-sdk==2.13.0",
    "click",
    "pvlib",
    "pvlive-api==1.4.0",
]

[project.urls]
Homepage = "https://github.com/openclimatefix/pvlive-consumer"
Repository = "https://github.com/openclimatefix/pvlive-consumer"
Issues = "https://github.com/openclimatefix/pvlive-consumer/issues"

[project.scripts]
pvlive-consumer = "pvliveconsumer.app:app"

[tool.setuptools.packages.find]
include = ["pvliveconsumer*"]

[tool.setuptools.package-data]
"pvliveconsumer.data" = ["*.csv"]

# UV configuration
[tool.uv]
dev-dependencies = [
    "pytest>=6.0",
    "pytest-cov",
    "pytest-mock",
    "black",
    "ruff",
    "mypy",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I"]
ignore = []

[tool.black]
line-length = 100
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
